<?xml version="1.0"?>
<package format="2">
  <name>mesh_maps</name>
  <version>0.0.1</version>
  <description>The mesh_maps package</description>
  <maintainer email="spuetz@uos.de">Sebastian Pütz</maintainer>
  <license>BSD-3</license>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <exec_depend>market_garden_ibbenbueren</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
